edit build.gradle
- add possibility to create .exe